fixing dark mode button

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -181,7 +181,7 @@ body.dark-mode {
   background-color: #f0f0f0;
   border: none;
   padding: 8px 12px; /* Adjusted padding for smaller font */
-  font-size: 14px; /* Smaller font size */
+  font-size: 12px; /* Smaller font size */
   cursor: pointer;
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
